no warnings at start, at project open, or when a bot runs
Three command lines, three fixes. Studio's own: javafx.graphics is a
named module that loads its own natives, so ALL-UNNAMED alone left the
restricted-method warning standing, and ClassGraph's invokeCleaner needs
--sun-misc-unsafe-memory-access=allow on JDK >= 23. Both go in the
javafx:run options and jpackage's; the shaded jar's manifest carries
Enable-Native-Access for `java -jar`, and CLAUDE.md now gives the line
to paste into an IntelliJ run configuration, which reads none of these.

A bot's JVM is the second: runtime/BotJvm holds the options both the run
and the debug launch add, so OpenCV stops warning in the output pane.

The third is not a JVM at all: opening a project resolved JavaFX's
published poms, whose declarations the descriptor reader reports as six
problems each. simplelogger.properties silences those readers to error.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01Hhm5atCVZfMhdDVh4pkfgc